@@ -199,7 +199,7 @@
     Read his <ulink type="http" url="http://www.cs.umd.edu/hcil/treemap-history/index.shtml">vision on treemaps</ulink>.</para>
     
        <!-- ==== Figure ==== -->
-      <figure id="baobab-fig"> 
+      <figure id="baobab-treemap-fig"> 
 	<screenshot> 
 	  <mediaobject> 
 	    <imageobject>
